[package]
name = "titanic-rs"
description = "your time tracking and invoicing companion written in rust"
authors = ["Stefan Römer - SENVANG IT Solutions Co. Ltd."]
homepage = "https://github.com/senvang/titanic-rs"
repository = "https://github.com/senvang/titanic-rs"
license = "GPL-2.0-only"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
